2007-02-19  Bruno Haible  <bruno@clisp.org>

	* lib/closeout.c: Include <stdlib.h> instead of exit.h.
	* lib/fd-ostream.oo.c: Don't include exit.h.
	* lib/html-styled-ostream.oo.c: Include <stdlib.h> instead of exit.h.
	* lib/iconv-ostream.oo.c: Don't include exit.h.
	* lib/memory-ostream.oo.c: Likewise.
	* lib/term-ostream.oo.c: Likewise.
	* lib/xmalloc.c: Likewise.

2007-02-12  Bruno Haible  <bruno@clisp.org>

	* modules/gettext-tools-misc (Files): Add m4/locale-fr.m4.

2007-02-01  Bruno Haible  <bruno@clisp.org>

	* modules/gettext-tools-misc (Makefile.am): Add @LIB_ACL@ to
	lib_LDFLAGS.
	Reported by Ralf Wildenhues <Ralf.Wildenhues@gmx.de>.

2007-01-28  Bruno Haible  <bruno@clisp.org>

	* lib/linebreak.c.diff: Update.

2007-01-27  Bruno Haible  <bruno@clisp.org>

	Move a patch to gnulib.
	* lib/javacomp.c.diff: Remove file.
	* modules/javacomp.diff: Remove file.
	* Makefile.am (EXTRA_DIST): Remove them.

2007-01-26  Bruno Haible  <bruno@clisp.org>

	* lib/propername.c: Don't include strstr.h, use <string.h> instead.

2007-01-12  Bruno Haible  <bruno@clisp.org>

	* lib/xreadlink.c (xreadlink): Handle an ERANGE error. Needed for
	AIX and HP-UX. Based on a gnulib patch from Paul Eggert on 2004-11-03.

2006-12-23  Bruno Haible  <bruno@clisp.org>

	* term-ostream.oo.c (out_attr_change): Consider the side effects of
	exit_attribute_mode: Turn off all attributes before turning on others.
	Also re-enable the colors after turning off attributes.

2006-12-23  Bruno Haible  <bruno@clisp.org>

	* build-aux/moopp (func_emit_source_h, func_emit_source_c): Accept the
	newfile_base as second argument. Emit #line directives without a
	directory.

2006-12-22  Bruno Haible  <bruno@clisp.org>

	* modules/html-styled-ostream (Makefile.am) [WOE32DLL]: Use a C++
	wrapper file.
	* modules/term-styled-ostream (Makefile.am) [WOE32DLL]: Likewise.

2006-12-22  Bruno Haible  <bruno@clisp.org>

	Test for CC=c++ at configure-time.
	* m4/moo.m4: New file.