@@ -1,28 +1,0 @@
-Description:
-Reading symbolic links without size limitation.
-
-Files:
-lib/xreadlink.h
-lib/xreadlink.c
-m4/xreadlink.m4
-
-Depends-on:
-readlink
-ssize_t
-xalloc
-
-configure.ac:
-gl_XREADLINK
-
-Makefile.am:
-lib_SOURCES += xreadlink.h xreadlink.c
-
-Include:
-"xreadlink.h"
-
-License:
-GPL
-
-Maintainer:
-Bruno Haible
-
